# rust-snake

./: Cargo.toml  README.md
src/: app.rs  main.rs  snake.rs
