[package]
name = "rust-snake"
version = "0.1.0"
authors = ["Walter Huang <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston_window = "0.107.0"
rand = "0.7.3"
find_folder = "0.3.0"